--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
+    "konva": "^1.5.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-color": "^2.11.4",
+    "react-dom": "^15.4.2",
+    "react-konva": "^1.1.1",
+    "react-route": "^1.0.3",
+    "react-socket.io": "^1.0.3",
+    "reactcss": "^1.2.2",
+    "socket.io-client": "^1.7.3",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
