--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "react-scripts": "0.9.4",
-    "webpack": "^1.14.0",
+    "webpack": "^2.3.1",
     "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "react-color": "^2.11.4",
     "react-dom": "^15.4.2",
     "react-konva": "^1.1.1",
-    "react-route": "^1.0.3",
+    "react-router": "^2.8.1",
     "react-socket.io": "^1.0.3",
     "reactcss": "^1.2.2",
     "socket.io-client": "^1.7.3",
