--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-color": "^2.11.4",
     "react-dom": "^15.4.2",
     "react-konva": "^1.1.1",
-    "react-router": "^2.8.1",
+    "react-router": "^3.x.x",
     "react-socket.io": "^1.0.3",
     "reactcss": "^1.2.2",
     "socket.io-client": "^1.7.3",
