--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^15.4.2",
     "react-konva": "^1.1.1",
     "react-popup": "^0.6.0",
-    "react-router": "^3.x.x",
+    "react-router": "^4.x.x",
+    "react-router-dom": "^4.1.1",
     "react-socket.io": "^1.0.3",
     "reactcss": "^1.2.2",
     "socket.io-client": "^1.7.3",
