--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "validation",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
